precompiles/utils/macro/tests/compile-fail/precompile/evm-data/output-dont-impl-evmdata.stderr
error[E0277]: the trait bound `String: EvmData` is not satisfied
  --> tests/compile-fail/precompile/evm-data/output-dont-impl-evmdata.rs:26:46
   |
26 |     fn foo(test: &mut impl PrecompileHandle) -> EvmResult<String> {
   |                                                 ^^^^^^^^^^^^^^^^^ the trait `EvmData` is not implemented for `String`
   |
   = help: the following other types implement trait `EvmData`:
             bool
             u8
             u16
             u32
             u64
             u128
             primitive_types::U256
             primitive_types::H256
           and $N others
note: required by a bound in `encode_as_function_return_value`
  --> $WORKSPACE/precompiles/utils/src/data/mod.rs
   |
   | pub fn encode_as_function_return_value<T: EvmData>(value: T) -> Vec<u8> {
   |                                           ^^^^^^^ required by this bound in `encode_as_function_return_value`
